--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
   "dependencies": {
     "@tailwindcss/typography": "^0.5.15",
     "better-sqlite3": "^11.3.0",
+    "fs": "^0.0.1-security",
     "gray-matter": "^4.0.3",
     "next": "14.2.14",
+    "path": "^0.12.7",
     "react": "^18",
     "react-dom": "^18",
     "remark": "^15.0.1",
     "remark-gfm": "^4.0.0",
-    "remark-html": "^16.0.1"
+    "remark-html": "^16.0.1",
+    "sharp": "^0.33.5"
   },
   "devDependencies": {
     "@types/node": "^20",
