--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "sharp": "^0.33.5"
   },
   "devDependencies": {
+    "@types/better-sqlite3": "^7.6.11",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
